Finished for inital review

--- a/experience.html
+++ b/experience.html
@@ -8,14 +8,14 @@
   <link href="https://fonts.googleapis.com/css?family=Muli%7CRoboto:400,300,500,700,900" rel="stylesheet"></head>
   <body>
 
-    <div class="main-nav">
+    <nav>
         <ul class="nav">
           <li class="name">Molly Minnighan</li>
           <li><a href="index.html">Home</a></li>
           <li><a href="experience.html">Experience</a></li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
-    </div>
+      </nav>
 
     <header>
       <img src="images/selfie.jpg" alt=" Selfie of Molly Minnighan outside" class="profile-image">
@@ -23,7 +23,7 @@
     </header>
 
     <main class="flex">
-      <div class="card">
+      <section class="card">
         <h2><strong>My Experience</strong></h2>
         <p>Since graduating from university, I have worked in a variety of different roles. I trained to become a qualified Nursery Nurse and later decided to try a new role, I now work as an Administrator for a pensions company.</p>
         <ul>
@@ -32,7 +32,12 @@
         <li><p><strong>July 2018 - September 2019:</strong> Nursery Assistant, Alphabet House Day Nursery</p></li>
         <li><p><strong>2015 - 2018:</strong> Nottingham Trent University, Bachelor's Degree in Philosophy, Communications & Society</p></li>
         </ul>
-      </div> 
+      </section>
+
+      <section class="card">
+       <h2>Exploring Dubai</h2>
+      <img src="images/butterfly.jpg" alt="Woman holding hands with a child.">
+      </section> 
 
     </main>
     <footer>
