--- a/contact.html
+++ b/contact.html
@@ -8,14 +8,14 @@
   <link href="https://fonts.googleapis.com/css?family=Muli%7CRoboto:400,300,500,700,900" rel="stylesheet"></head>
   <body>
 
-    <div class="main-nav">
+    <nav>
         <ul class="nav">
           <li class="name">Molly Minnighan</li>
           <li><a href="index.html">Home</a></li>
           <li><a href="experience.html">Experience</a></li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
-    </div>
+      </nav>
 
     <header>
       <img src="images/selfie.jpg" alt="Another selfie of Molly Minnighan" class="profile-image">
@@ -23,25 +23,25 @@
     </header>
 
   <main class="flex">
-      <div class="card">
+      <section class="card">
         <h2><strong>Contact</strong></h2>
         <p>You can reach me via e-mail or address below:</p>
         <ul>
-        <p><strong>Email:</strong> <a href="mailto:mollymadeupemail@gmail.com">mollymadeupemail@gmail.com</a></p>
-        <p><strong>Address:</strong> 17 Sunshine Lane</p>
-        <p>Make Believe City</p>
-        <p>Sunnyshire</p>
-        <p>AL9 1UP</p>
-        <p>U.K.</p>
+        <li><p><strong>Email:</strong> <a href="mailto:mollymadeupemail@gmail.com">mollymadeupemail@gmail.com</a></p></li>
+        <li><p><strong>Address:</strong> 17 Sunshine Lane</p></li>
+        <li><p>Make Believe City</p></li>
+        <li><p>Sunnyshire</p></li>
+        <li><p>AL9 1UP</p></li>
+        <li><p>U.K.</p></li>
         </ul>
-        </div> 
+      </section> 
 
     </main>
     <footer>
       <ul>
-        <li><a href="https://twitter.com/mols__" class="social twitter">Twitter</a></li>
-        <li><a href="https://www.linkedin.com/in/molly-minnighan-85952015b/" class="social linkedin">LinkedIn</a></li>
-        <li><a href="https://github.com/mollyellen" class="social github">Github</a></li>
+      <li><a href="https://twitter.com/mols__" class="social twitter">Twitter</a></li>
+      <li><a href="https://www.linkedin.com/in/molly-minnighan-85952015b/" class="social linkedin">LinkedIn</a></li>
+      <li><a href="https://github.com/mollyellen" class="social github">Github</a></li>
       </ul>
       <p class="copyright">Copyright 2021, Molly Minnighan</p>
     </footer>
