--- a/index.html
+++ b/index.html
@@ -8,30 +8,30 @@
   <link href="https://fonts.googleapis.com/css?family=Muli%7CRoboto:400,300,500,700,900" rel="stylesheet"></head>
   <body>
 
-    <div class="main-nav">
+    <nav>
         <ul class="nav">
           <li class="name">Molly Minnighan</li>
           <li><a href="index.html">Home</a></li>
           <li><a href="experience.html">Experience</a></li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
-    </div>
+      </nav>>
 
     <header>
-      <img src="images/profile.JPG" alt="Selfie of Molly Minngihan" class="profile-image">
+      <img src="images/profile.JPG" alt="Selfie of Molly Minnighan" class="profile-image">
       <h1 class="tag name"><strong>Hi, I’m Molly.</strong></h1>
       <p class="tag location">My home is Bedfordshire, U.K.</p>
     </header>
 
     <main class="flex">
-      <div class="card">
+      <section class="card">
         <h2><strong>About Me</strong></h2>
         <p>I've been working as an Administrator but I want to become an awesome Developer!</p>
         <p>I’m a huge Formula 1 fan who loves to travel. You'll often find me curled up on my bed playing Dragon Quest on my Switch.</p>
         <p>I would describe myself as a dreamer and a thinker. I love all things extra terrestrial, spiritual and supernatural.</p>
-      </div> 
+      </section> 
 
-      <div class="card">
+      <section class="card">
         <h2><strong>Goals</strong></h2>
         <p>I want to become a Full Stack Developer and become a whizz at:</p>
         <ul class="skills">
@@ -42,7 +42,7 @@
           <li>Ruby</li>
         </ul>
         <p>I’d like to land a position as a Front End Developer creating wonderful projects for my clients.</p>
-      </div> 
+      </section> 
      
     </main>
     <footer>
